hphp/hack/test/typecheck/memoized_static/memoize_static1.php.exp
File "memoize_static1.php", line 4, characters 26-28:
`memoize` is not allowed on static methods in classes that aren't final  (NastCheck[3041])
File "memoize_static1.php", line 5, characters 16-21:
Can't use `new static()` for `NotFinal`; `__construct` arguments are not guaranteed to be consistent in child classes (Typing[4060])
File "memoize_static1.php", line 2, characters 7-14:
This declaration is neither `final` nor uses the `<<__ConsistentConstruct>>` attribute
