hphp/hack/test/typecheck/memoized_static/memoize_static1.php
<?hh
class NotFinal {
  <<__Memoize>>
  public static function get(): this {
    return new static();
  }
}
